# BenGL

./: CMakeLists.txt
res/shaders/: fragment.glsl  fragment.shader  vertex.glsl  vertex.shader
src/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
